--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "nativeScheduler",
+    "name": "CS Course Scheduler",
     "slug": "nativeScheduler",
     "version": "1.0.0",
     "orientation": "portrait",
